welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:9: error: type mismatch;
 found   : Unit
 required: Boolean
   if (equalOk==true ){
   ^