welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = { 
  if (equalOk==false){
    
  	if (a<b && b<c){
    	return true
  	}
    return false
  }
   if (equalOk==true ){
     
   		if (a<=b && b<= c|| a<=b && b<=c){
     return true
   }
  return false
   }
}
